# supertable

./: .gitignore  Cargo.toml  README.md  build.rs  docker-compose.yml  justfile  qodana.yaml
.cargo/: config.toml
docker/mongo/: 01-init.js
docker/mysql/init/: 01-schema.sql
docker/postgres/init/: 01-schema.sql
docker/redis/: init-redis.sh
docker/sqlite/: init.py
scripts/: dev-watch.ps1  dev-watch.sh
src/: assets.rs  data.rs  db.rs  i18n.rs  main.rs  palette.rs
src/ui/: app.rs  connection_form.rs  editor.rs  mod.rs  onboarding.rs  results.rs  sidebar.rs  top_bar.rs
