[package]
name = "supertable"
version = "0.1.0"
edition = "2024"
authors = ["SuperWindcloud"]
description = "A SuperTable desktop database client UI built with GPUI and gpui-component."
license = "MIT"
readme = "README.md"
keywords = ["gpui", "database", "desktop", "sql", "supertable"]
categories = ["gui", "database"]
homepage = "https://super1windcloud/supertable"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
raw-window-handle = "0.6"
mysql = "26.0.1"
postgres = "0.19.10"
rusqlite = { version = "0.32.1", features = ["bundled"] }
redis = "0.32.7"
mongodb = { version = "3.2.5", default-features = false, features = ["sync", "rustls-tls"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[build-dependencies]
image = "0.25.10"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"


[profile.dev]
debug = 0

#最快编译时间
[profile.release]
lto = false
codegen-units = 256
panic = "abort"
debug = 0
